Fixing overflow for modal document archive

--- a/src/pages/DocDetail/DocDetail.module.css
+++ b/src/pages/DocDetail/DocDetail.module.css
@@ -23,10 +23,12 @@
   margin-left: 56px;
   margin-right: 56px;
   position: relative;
-  height: 100%;
+  min-height: 100%;
   /* padding-bottom: 100px; */
   background-color: var(--dark-grey);
   padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 20px;
 }
 
 .TypeDocument {
@@ -73,9 +75,9 @@
 }
 
 .CloseModal {
-  position: absolute;
+  position: fixed;
   top: 24px;
-  right: 10px;
+  right: 64px;
 }
 
 .Creator,
@@ -90,13 +92,13 @@
 }
 
 .LeftArrow {
-  position: absolute;
+  position: fixed;
   left: 5px;
   top: 50%;
 }
 
 .RightArrow {
-  position: absolute;
+  position: fixed;
   right: 5px;
   top: 50%;
 }
